# movevm

./: Cargo.toml
.github/workflows/: move-cli.yml
tools/initia-move-cli/: Cargo.toml  README.md
tools/initia-move-cli/src/: main.rs
