[package]
name = "initia-move-cli"
version.workspace = true
publish = true
description = "Initia Move Compiler CLI"
homepage = "https://initia.xyz/"
repository = "https://github.com/initia-labs/movevm"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "initia-move-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.worksapce = true
initia-move-compiler = { path = "../../crates/compiler"}